--- a/index.conf
+++ b/index.conf
@@ -127,6 +127,7 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Rewrit
 https://raw.githubusercontent.com/Orz-3/QuantumultX/master/YouTube.conf, tag=YouTube去广告, update-interval=86400, opt-parser=false, enabled=false
 https://raw.githubusercontent.com/Orz-3/Orz-3/master/QuantumultX/TikTok.conf, tag=解锁Tiktok(自行安装证书并开启mitm), update-interval=86400, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/keminu/QuanxConf/main/VIPCrack.conf, tag=VIP服务, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/keminu/QuanxConf/main/ADCrack.conf, tag=自用ADCrack, update-interval=86400, opt-parser=false, enabled=true
 
 
 [rewrite_local]
