--- a/ADCrack.conf
+++ b/ADCrack.conf
@@ -1,4 +1,3 @@
 ; 自用的一些去广告
 ; 卡卡西里奥
-DOMAIN-SUFFIX,adtest.alibaba.com, 广告拦截
-;HOST,adtest.alibaba.com, 广告拦截
+DOMAIN-SUFFIX,adtest.alibaba.com,REJECT
