--- a/ADCrack.conf
+++ b/ADCrack.conf
@@ -1,3 +1,5 @@
 ; 自用的一些去广告
 ; 卡卡西里奥
-DOMAIN-SUFFIX,adtest.alibaba.com,REJECT
+hostname = adtest.alibaba.com
+
+^https?:\/\/adtest\.alibaba\.com\/ url reject
