--- a/ADCrack.conf
+++ b/ADCrack.conf
@@ -1,5 +1,6 @@
 ; 自用的一些去广告
 ; 卡卡西里奥
+; 更新日期 2022/05/31
 
 hostname = adtest.alibaba.com,*.amemv.com,api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,www.zhihu.com,api.zhihu.com,homepage-api.smzdm.com,haojia-api.smzdm.com,article-api.smzdm.com,haojia.m.smzdm.com,app-api.smzdm.com,s-api.smzdm.com,app.bilibili.com
 
